# AbstractVM

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
includes/: AOperand.hpp  AbstractVM.hpp  IOperand.hpp  Operand.hpp  OperandTemplate.hpp
includes/classes/: Double.hpp  Float.hpp  Int16.hpp  Int32.hpp  Int8.hpp  Lexer.hpp  Operand.hpp  OperandFactory.hpp  OperandStack.hpp  OperandStackController.hpp  Parser.hpp
includes/classes/operands/: Double.hpp  Int32.hpp
sources/: OperandTemplate.cpp  main.cpp
sources/classes/: AOperand.cpp  Double.cpp  Float.cpp  Int16.cpp  Int32.cpp  Int8.cpp  Lexer.cpp  Operand.cpp  OperandFactory.cpp  OperandStack.cpp  OperandStackController.cpp  Parser.cpp
sources/classes/operands/: Double.cpp  Float.cpp  Int16.cpp  Int32.cpp  Int8.cpp
tests/: test11  test9
